--- a/Progbase3/MoiveHubSystem/StyleSheet.xaml
+++ b/Progbase3/MoiveHubSystem/StyleSheet.xaml
@@ -26,4 +26,19 @@
     <Style TargetType="DatePicker" BasedOn="{StaticResource ResourceKey=BaseFont}">
         <Setter Property="Margin" Value="5 0"/>
     </Style>
+
+
+    <Style x:Key="isPos" TargetType="TextBox" BasedOn="{StaticResource ResourceKey=BaseFont}">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding SelectedReview.isPositive}" Value="True">
+                <Setter Property="BorderBrush" Value="ForestGreen"/>
+                <Setter Property="BorderThickness" Value="3"/>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding SelectedReview.isPositive}" Value="False">
+                <Setter Property="BorderBrush" Value="DarkRed"/>
+                <Setter Property="BorderThickness" Value="3"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
