add: binding to new fields in addReview

--- a/Progbase3/MoiveHubSystem/StyleSheet.xaml
+++ b/Progbase3/MoiveHubSystem/StyleSheet.xaml
@@ -41,4 +41,9 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+
+
+    <Style TargetType="Slider" BasedOn="{StaticResource ResourceKey=BaseFont}">
+        <Setter Property="Margin" Value="10 0"/>
+    </Style>
 </ResourceDictionary>
