fix: rate can't be 0

--- a/Progbase3/MoiveHubSystem/Views/AddReviewWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/AddReviewWindow.xaml
@@ -24,7 +24,9 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <DockPanel x:Name="fieldPanel" Grid.Column="0">
+
+        <ScrollViewer>
+            <DockPanel x:Name="fieldPanel" Grid.Column="0" Margin="5 0">
             <Label DockPanel.Dock="Top" Content="Title: "/>
             <TextBox DockPanel.Dock="Top" x:Name="titleField" Text="{Binding Title}"/>
 
@@ -32,10 +34,10 @@
             <Slider DockPanel.Dock="Top" x:Name="rateField" 
                     IsSnapToTickEnabled="True" TickPlacement="BottomRight" 
                     AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" 
-                    Maximum="10" Minimum="0"
+                    Maximum="10" Minimum="1"
                     TickFrequency="0.5"
                     Value="{Binding Rate}"
-                    Ticks="0, 0.5, 1, 1,5, 2, 2.5, 3, 3.5, 4.5, 5, 5.5, 6, 6.5, 7, 7.5,8, 8.5, 9, 9.5, 10"/>
+                    Ticks="1, 1,5, 2, 2.5, 3, 3.5, 4.5, 5, 5.5, 6, 6.5, 7, 7.5,8, 8.5, 9, 9.5, 10"/>
 
 
 
@@ -65,6 +67,8 @@
             
             
         </DockPanel  >
+        </ScrollViewer>
+        
         <StackPanel Grid.Column="1"   VerticalAlignment="Center">
             <ListBox DockPanel.Dock="Top" Margin="10" x:Name="filmsList" ItemsSource="{Binding  PickList}" SelectedItem="{Binding SelectedFilm}" >
                 <ListBox.ItemTemplate>
