--- a/Progbase3/MoiveHubSystem/Views/EditReviewsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/EditReviewsWindow.xaml
@@ -5,8 +5,86 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MoiveHubSystem.Views"
         mc:Ignorable="d"
+        xmlns:resc="clr-namespace:MoiveHubSystem.Resources"
+        xmlns:viewmodels="clr-namespace:MoiveHubSystem.ViewModels"
+        x:Name="editRevWnd"
         Title="EditReviewsWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid x:Name="mainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+
+
+        <ScrollViewer>
+            <DockPanel x:Name="fieldPanel" Grid.Column="0" Margin="5 0">
+                <Label DockPanel.Dock="Top" Content="Title: "/>
+                <TextBox DockPanel.Dock="Top" x:Name="titleField" Text="{Binding Title}"/>
+
+                <Label DockPanel.Dock="Top" Content="Rate: "/>
+                <Slider DockPanel.Dock="Top" x:Name="rateField" 
+                    IsSnapToTickEnabled="True" TickPlacement="BottomRight" 
+                    AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" 
+                    Maximum="10" Minimum="1"
+                    TickFrequency="0.5"
+                    Value="{Binding Rate}"
+                    Ticks="1, 1,5, 2, 2.5, 3, 3.5, 4.5, 5, 5.5, 6, 6.5, 7, 7.5,8, 8.5, 9, 9.5, 10"/>
+
+
+
+                <Label DockPanel.Dock="Top" Content="Status or review: "/>
+                <ComboBox DockPanel.Dock="Top" x:Name="isPositiveField" ItemsSource="{Binding Source={resc:EnumBindingSource {x:Type viewmodels:ReviewStatus}}}" SelectedItem="{Binding Path=RevStatus}"/>
+
+                <Label DockPanel.Dock="Top" Content="The Film: "/>
+                <ListBox x:Name="castField" ItemsSource="{Binding FilmOnReview}"  SelectedItem="{Binding SelectedFilm}" DockPanel.Dock="Top">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}">
+                                <TextBlock.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"
+                                  Command="{Binding DataContext.ShiftFromOnReview, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"
+                                  CommandParameter="{Binding Id}" />
+                                </TextBlock.InputBindings>
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <Label DockPanel.Dock="Top" Content="Review text:" />
+                <ScrollViewer >
+                    <TextBox x:Name="reviewTextField" Text="{Binding ReviewText}" TextWrapping="WrapWithOverflow"/>
+                </ScrollViewer>
+
+
+
+            </DockPanel  >
+        </ScrollViewer>
+
+        <StackPanel Grid.Column="1"   VerticalAlignment="Center">
+            <ListBox DockPanel.Dock="Top" Margin="10" x:Name="filmsList" ItemsSource="{Binding  PickList}" SelectedItem="{Binding SelectedFilm}" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}">
+                            <TextBlock.InputBindings>
+                                <MouseBinding MouseAction="LeftDoubleClick"
+                                  Command="{Binding DataContext.ShiftToOnReview, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"
+                                  CommandParameter="{Binding Id}" />
+                            </TextBlock.InputBindings>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <WrapPanel  DockPanel.Dock="Top" Margin="10">
+                <Button Margin="5 0" Content="Prev Page" Command="{Binding LoadPrevPage}"/>
+                <Button Margin="5 0" Content="Next  Page" Command="{Binding LoadNextPage}"/>
+            </WrapPanel>
+        </StackPanel>
+        <Button Margin="10" Grid.Row="1" Grid.ColumnSpan="2" Content="Accept" CommandParameter="{Binding ElementName=editRevWnd}" Command="{Binding AcceptNewReview}"/>
+
     </Grid>
 </Window>
