--- a/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
@@ -7,26 +7,44 @@
         mc:Ignorable="d"
         x:Name="mapWnd"
         Title="Map Window" Height="450" Width="800">
-    <UniformGrid Columns="3">
-        <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenFilmsWindow}">
-            <DockPanel>
-                <Image DockPanel.Dock="Top" x:Name="filmsImage"/>
-                <Label HorizontalContentAlignment="Center" Content="Films"/>
-            </DockPanel>
-        </Button>
 
-        <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenActorsWindow}">
-            <DockPanel>
-                <Image DockPanel.Dock="Top" x:Name="actorsImage"/>
-                <Label HorizontalContentAlignment="Center" Content="Actors"/>
-            </DockPanel>
-        </Button>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenReviewsWindow}">
-            <DockPanel>
-                <Image DockPanel.Dock="Top" x:Name="reviewsImage"/>
-                <Label  HorizontalContentAlignment="Center" Content="Reviews"/>
-            </DockPanel>
-        </Button>
-    </UniformGrid>
+        <Menu Grid.Row="0">
+            <MenuItem Header="File">
+                <MenuItem Header="Export Films" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding ExecExportFilms}" />
+                <MenuItem Header="Import Films" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding ExecImportFilms}" />
+                <MenuItem Header="Exit" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding ExecExit}"/>
+            </MenuItem>
+            <MenuItem Header="Help">
+            </MenuItem>
+        </Menu>
+        <UniformGrid Columns="3" Grid.Row="1">
+            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenFilmsWindow}">
+                <DockPanel>
+                    <Image DockPanel.Dock="Top" x:Name="filmsImage"/>
+                    <Label HorizontalContentAlignment="Center" Content="Films"/>
+                </DockPanel>
+            </Button>
+
+            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenActorsWindow}">
+                <DockPanel>
+                    <Image DockPanel.Dock="Top" x:Name="actorsImage"/>
+                    <Label HorizontalContentAlignment="Center" Content="Actors"/>
+                </DockPanel>
+            </Button>
+
+            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenReviewsWindow}">
+                <DockPanel>
+                    <Image DockPanel.Dock="Top" x:Name="reviewsImage"/>
+                    <Label  HorizontalContentAlignment="Center" Content="Reviews"/>
+                </DockPanel>
+            </Button>
+        </UniformGrid>
+    </Grid>
+
 </Window>
