--- a/Progbase3/MoiveHubSystem/Views/ImportFilmsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ImportFilmsWindow.xaml
@@ -4,8 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MoiveHubSystem.Views"
+        xmlns:vm="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
+        x:Name="importWnd"
         Title="ImportFilmsWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:ImportViewModel />
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -19,10 +24,10 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10 50" IsEnabled="False"/>
+        <TextBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10 50" IsEnabled="False" Text="{Binding PathOfXML}" />
         <StackPanel Grid.Column="3" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="Destination file" Margin="10" />
-            <Button Content="Submit" Margin="10"/>    
+            <Button Content="Destination of XML" Margin="10" Command="{Binding PickDirectory}"/>
+            <Button Content="Submit" Margin="10" CommandParameter="{Binding ElementName=importWnd}" Command="{Binding ExecImport}"/>    
         </StackPanel>
     </Grid>
 </Window>
