--- a/Progbase3/MoiveHubSystem/Views/AuthenticationWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/AuthenticationWindow.xaml
@@ -4,9 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MoiveHubSystem.Views"
+        xmlns:vm="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
+        x:Name="authWnd"
         Title="AuthenticationWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:AuthenticationViewModel/>
+    </Window.DataContext>
+    
     <Grid>
-        
+        <StackPanel VerticalAlignment="Center" Margin="70 0" >
+
+            <Label Content="Login:"/>
+            <TextBox x:Name="loginField" Text="{Binding Login}"/>
+            <Label Content="Password:"/>
+            <TextBox x:Name="passwordField" Text="{Binding Password}"/>
+            <WrapPanel HorizontalAlignment="Center" Margin="10">
+                <Button  Content="Login" Margin="10 0" CommandParameter="{Binding ElementName=authWnd}" Command="{Binding ExecLoginization}"/>
+                <Button Content="Register" Margin="10 0" Command="{Binding ExecRegistation}"/>
+            </WrapPanel>
+        </StackPanel>
     </Grid>
 </Window>
