--- a/Progbase3/MoiveHubSystem/Views/FilmsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/FilmsWindow.xaml
@@ -49,11 +49,11 @@
             <StackPanel VerticalAlignment="Center">
                 <ListBox DockPanel.Dock="Top" Margin="10" x:Name="filmsList" ItemsSource="{Binding Films}" SelectedItem="{Binding SelectedFilm}" DisplayMemberPath="Title"/>
 
-                <ScrollViewer DockPanel.Dock="Top" Margin="10" Width="auto">
+                <ScrollViewer x:Name="crudBox" DockPanel.Dock="Top" Margin="10" Width="auto">
                     <StackPanel >
-                        <Button Margin="5" Content="Add" Command="{Binding AddFilm}"/>
-                        <Button Margin="5" Content="Delete" Command="{Binding DelFilm}"/>
-                        <Button Margin="5" Content="Edit" Command="{Binding EditFilm}"/>
+                        <Button x:Name="Add"  Margin="5" Content="Add" Command="{Binding AddFilm}"/>
+                        <Button x:Name="Del"  Margin="5" Content="Delete" Command="{Binding DelFilm}"/>
+                        <Button x:Name="Edit"  Margin="5" Content="Edit" Command="{Binding EditFilm}"/>
                     </StackPanel>
                 </ScrollViewer>
                 <WrapPanel  DockPanel.Dock="Top" Margin="10">
