--- a/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
@@ -27,21 +27,21 @@
         <TextBlock x:Name="userName" Grid.Row="1" Margin="10" HorizontalAlignment="Right"/>
         
         <UniformGrid Columns="3" Grid.Row="2">
-            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenFilmsWindow}">
+            <Button x:Name="gotoFilms" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenFilmsWindow}">
                 <DockPanel>
                     <Image DockPanel.Dock="Top" x:Name="filmsImage"/>
                     <Label HorizontalContentAlignment="Center" Content="Films"/>
                 </DockPanel>
             </Button>
 
-            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenActorsWindow}">
+            <Button x:Name="gotoActors" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenActorsWindow}">
                 <DockPanel>
                     <Image DockPanel.Dock="Top" x:Name="actorsImage"/>
                     <Label HorizontalContentAlignment="Center" Content="Actors"/>
                 </DockPanel>
             </Button>
 
-            <Button CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenReviewsWindow}">
+            <Button x:Name="gotoReviews" CommandParameter="{Binding ElementName=mapWnd}" Command="{Binding OpenReviewsWindow}">
                 <DockPanel>
                     <Image DockPanel.Dock="Top" x:Name="reviewsImage"/>
                     <Label  HorizontalContentAlignment="Center" Content="Reviews"/>
