add: creating word report

--- a/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MoiveHubSystem"
+        xmlns:vm="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
         x:Name="mapWnd"
         Title="Map Window" Height="450" Width="800">
+
 
     <Grid>
         <Grid.RowDefinitions>
@@ -23,6 +25,7 @@
             </MenuItem>
             <MenuItem Header="Help">
             </MenuItem>
+            <MenuItem Header="Generate Report" Command="{Binding ExecGenReport}"/>
         </Menu>
         <TextBlock x:Name="userName" Grid.Row="1" Margin="10" HorizontalAlignment="Right"/>
         
