--- a/Progbase3/MoiveHubSystem/Views/ActorsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ActorsWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vmAct="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
         x:Name="actorWnd"
-        Title="Actor Window" MinHeight="560" Height="560" Width="800">
+        Title="Actor Window" MinHeight="650" Height="650" Width="800">
     <Window.DataContext>
         <vmAct:ActorsViewModel/>
     </Window.DataContext>
@@ -70,6 +70,8 @@
                     <Button Margin="5 0" Content="Prev Page" Command="{Binding LoadPrevPage}"/>
                     <Button Margin="5 0" Content="Next  Page" Command="{Binding LoadNextPage}"/>
                 </WrapPanel>
+                <TextBox x:Name="searchField" Text="{Binding SearchField}"/>
+                <Button Content="Find Actor" Command="{Binding FindActor}"/>
             </StackPanel>
         </GroupBox>
         
