--- a/Progbase3/MoiveHubSystem/Views/ReviewsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ReviewsWindow.xaml
@@ -49,7 +49,7 @@
         </GroupBox>
 
         <GroupBox Grid.Column="0" Grid.RowSpan="3" Header="" Grid.Row="1">
-            <StackPanel VerticalAlignment="Top">
+            <StackPanel VerticalAlignment="Center">
                 <ListBox DockPanel.Dock="Top" Margin="10" x:Name="reviewsList" ItemsSource="{Binding Reviews}" SelectedItem="{Binding SelectedReview}" DisplayMemberPath="Title"/>
 
                 <ScrollViewer x:Name="crudBox" DockPanel.Dock="Top" Margin="10" Width="auto">
