--- a/Progbase3/MoiveHubSystem/Views/EditActorWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/EditActorWindow.xaml
@@ -68,8 +68,8 @@
 
                 <GroupBox Header="Change Image" Margin="10">
                     <StackPanel>
-                        <TextBox Margin="10 10 10 0" IsReadOnly="True" Text="Selected Image"/>
-                        <Button Margin="10" Content="New image" />
+                        <TextBox Margin="10 10 10 0" IsReadOnly="True" Text="{Binding NewImagePath}"/>
+                        <Button Margin="10" Content="New image"  Command="{Binding SelectNewImage}"/>
                     </StackPanel>
                     
                     
