edit: unblocking or blocking 'accept' buttons in time of prop.changing

--- a/Progbase3/MoiveHubSystem/Views/ActorsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ActorsWindow.xaml
@@ -70,7 +70,7 @@
                     <Button Margin="5 0" Content="Prev Page" Command="{Binding LoadPrevPage}"/>
                     <Button Margin="5 0" Content="Next  Page" Command="{Binding LoadNextPage}"/>
                 </WrapPanel>
-                <TextBox x:Name="searchField" Text="{Binding SearchField}"/>
+                <TextBox x:Name="searchField" Text="{Binding SearchField, UpdateSourceTrigger=PropertyChanged}"/>
                 <Button Content="Find Actor" Command="{Binding FindActor}"/>
             </StackPanel>
         </GroupBox>
