--- a/Progbase3/MoiveHubSystem/Views/AddReviewWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/AddReviewWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:viewmodels="clr-namespace:MoiveHubSystem.ViewModels"
         xmlns:resc="clr-namespace:MoiveHubSystem.Resources"
         x:Name="addRevWnd"
-        Title="AddReviewWindow" Height="450" Width="800">
+        Title="AddReviewWindow" Height="550" Width="800" MinHeight="550" MinWidth="800">
     <Window.DataContext>
         <viewmodels:AddReviewViewModel />
     </Window.DataContext>
