--- a/Progbase3/MoiveHubSystem/Views/EditActorWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/EditActorWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MoiveHubSystem.Views"
         mc:Ignorable="d"
         x:Name="editActWnd"
-        Title="EditActorWindow" Height="450" Width="800">
+        Title="EditActorWindow" Height="550" Width="800" MinHeight="550" MinWidth="800">
     <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
