--- a/Progbase3/MoiveHubSystem/Views/EditReviewsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/EditReviewsWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:resc="clr-namespace:MoiveHubSystem.Resources"
         xmlns:viewmodels="clr-namespace:MoiveHubSystem.ViewModels"
         x:Name="editRevWnd"
-        Title="EditReviewsWindow" Height="450" Width="800">
+        Title="EditReviewsWindow" Height="550" Width="800" MinHeight="550" MinWidth="800">
     <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
