--- a/Progbase3/MoiveHubSystem/Views/ExportFilmsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ExportFilmsWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
         x:Name="exportWnd"
-        Title="ExportFilmsWindow" Height="450" Width="800">
+        Title="ExportFilmsWindow" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Window.DataContext>
         <vm:ExportViewModel />
     </Window.DataContext>
